<resources>
    <string name="app_name">Nail Appointment App</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="book">Book</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email Address</string>
    <string name="edit">edit</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="delete">Delete</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bounce">Bounce</string>
    <string name="welcome">Welcome</string>
    <string name="my_appointments">My Appointments</string>
</resources>