<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_menu_home"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/bottom_menu_date"
        android:icon="@drawable/calendar"
        android:title="@string/book" />
    <item
        android:id="@+id/fab"
        android:enabled="false"
        android:title="" />
    <item
        android:id="@+id/bottom_menu_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/bottom_menu_logout"
        android:icon="@drawable/logout"
        android:title="@string/logout" />
</menu>