<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_32dp"
            android:letterSpacing="0.1"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_purple"
            android:textSize="@dimen/_32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12dp"
                android:background="@drawable/custom_input_border"
                android:drawableStart="@drawable/custom_email"
                android:drawablePadding="@dimen/_12dp"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/_12dp"
                android:paddingVertical="@dimen/_16dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12dp"
                android:background="@drawable/custom_input_border"
                android:drawableStart="@drawable/custom_person"
                android:drawablePadding="@dimen/_12dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingHorizontal="@dimen/_12dp"
                android:paddingVertical="@dimen/_16dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12dp"
                android:background="@drawable/custom_input_border"
                android:drawableStart="@drawable/custom_lock"
                android:drawablePadding="@dimen/_12dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_12dp"
                android:paddingVertical="@dimen/_16dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12dp"
                android:background="@drawable/custom_input_border"
                android:drawableStart="@drawable/custom_lock"
                android:drawablePadding="@dimen/_12dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_12dp"
                android:paddingVertical="@dimen/_16dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12dp"
                android:textColor="@color/white"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textSize="@dimen/_14sp"
                android:letterSpacing="0.1"
                android:background="@drawable/rounded_corners"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Already have an account?"
                    />

                <Button
                    android:id="@+id/loginNavigationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:layout_marginStart="@dimen/_08dp"
                    android:padding="0dp"
                    android:text="@string/login"
                    android:textColor="@android:color/holo_purple"

                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>