<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SettingsFragment"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textSize="@dimen/_32sp"
        android:textAllCaps="true"
        android:letterSpacing="0.1"
        android:textStyle="bold"
        android:textColor="@android:color/holo_purple"
        android:layout_marginBottom="@dimen/_32dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/_32dp"
        >

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12dp"
            android:background="@drawable/custom_input_border"
            android:drawableStart="@drawable/custom_email"
            android:drawablePadding="@dimen/_12dp"
            android:ems="10"
            android:hint="@string/email_address"
            android:paddingHorizontal="@dimen/_12dp"
            android:paddingVertical="@dimen/_16dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12dp"
            android:background="@drawable/custom_input_border"
            android:drawableStart="@drawable/custom_person"
            android:drawablePadding="@dimen/_12dp"
            android:ems="10"
            android:hint="@string/username"
            android:paddingHorizontal="@dimen/_12dp"
            android:paddingVertical="@dimen/_16dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_48dp"
        >

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/trans_bg_rounded_corners"
            android:layout_marginEnd="@dimen/_24dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textSize="@dimen/_14sp"
            android:textColor="@android:color/holo_purple"
            android:letterSpacing="0.1"
            />

        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:textAllCaps="true"
            android:textSize="@dimen/_14sp"
            android:textColor="@android:color/white"
            android:letterSpacing="0.1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        >

    <TextView
        android:textSize="@dimen/_14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Got any questions?"
        android:textColor="@android:color/darker_gray"
        />

    <Button
        android:id="@+id/contactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contact us"
        android:textSize="@dimen/_14sp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:textColor="@android:color/holo_purple"
        android:background="@android:color/transparent"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_08dp"
        />
    </LinearLayout>
</LinearLayout>