<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activites.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_32dp"
            android:letterSpacing="0.1"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_purple"
            android:textSize="@dimen/_32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12dp"
                android:background="@drawable/custom_input_border"
                android:drawableStart="@drawable/custom_email"
                android:drawablePadding="@dimen/_12dp"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/_12dp"
                android:paddingVertical="@dimen/_16dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12dp"
                android:background="@drawable/custom_input_border"
                android:drawableStart="@drawable/custom_lock"
                android:drawablePadding="@dimen/_12dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_12dp"
                android:paddingVertical="@dimen/_16dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12dp"
                android:background="@drawable/rounded_corners"
                android:letterSpacing="0.1"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Not have an account?" />

                <Button
                    android:id="@+id/registerNavigationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_08dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text="@string/register"
                    android:textColor="@android:color/holo_purple" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:elevation="0dp"
        app:fabCradleMargin="@dimen/_08dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            app:itemIconSize="@dimen/_32dp"
            app:itemIconTint="@color/bottom_nav_color"
            app:labelVisibilityMode="unlabeled" />

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_purple"
        android:src="@drawable/my_bookings"
        app:borderWidth="0dp"
        app:layout_anchor="@+id/bottomAppBar"
        app:tint="@android:color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
